// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic export 1`] = `
Array [
  "[4,0,\\"meta\\",2,\\"test\\",\\"0.0.0\\"]",
  "[4,1,\\"account\\",\\"mock_account_export_0\\",\\"pQNKgto\\",\\"peercoin\\"]",
  "[4,2,\\"account\\",\\"mock_account_export_1\\",\\"2KTQvcmdW2zTneCnPImZvgYLGi5rIBgc\\",\\"peercoin\\"]",
  "[4,3,\\"account\\",\\"mock_account_export_2\\",\\"23PIvq83MrbdhquMsST6yH4PX3dBptsh\\",\\"peercoin\\"]",
]
`;

exports[`basic export with pad 1`] = `
Array [
  "[4,0,\\"meta\\",2,\\"test\\",\\"0.0.0\\"]                                                        ",
  "[4,1,\\"account\\",\\"mock_account_export_0\\",\\"pQNKgto\\",\\"peercoin\\"]                         ",
  "[4,2,\\"account\\",\\"mock_account_export_1\\",\\"2KTQvcmdW2zTneCnPImZvgYLGi5rIBgc\\",\\"peercoin\\"]",
  "[4,3,\\"account\\",\\"mock_account_export_2\\",\\"23PIvq83MrbdhquMsST6yH4PX3dBptsh\\",\\"peercoin\\"]",
]
`;
